orbs/wc/16/work/compile.log
wc.c:33:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
wc.c: In function ‘isletter’:
wc.c:37:1: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
 printf("\nORBS:%d:%d:%s:%d\n", 36, 19, "c", c);
 ^
wc.c:37:1: warning: incompatible implicit declaration of built-in function ‘printf’
wc.c:37:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
